k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zta-demo
  labels:
    istio-injection: enabled
