k8s/manifests/istio-authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: authservice
    spec:
      volumes:
        - name: authservice-config
          configMap:
            name: authservice
      containers:
      - name: authservice
        image: ghcr.io/istio-ecosystem/authservice/authservice:0.5.0
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 10003
        volumeMounts:
          - name: authservice-config
            mountPath: /etc/authservice
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10004
---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  labels:
    app: authservice
spec:
  ports:
  - port: 10003
    name: grpc
  selector:
    app: authservice
